--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "@tensorflow/tfjs": "^4.19.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "csurf": "^1.11.0",
     "exifr": "^7.1.3",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.0",
+    "express-validator": "^7.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
